# LolEighty

./: .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.postgres-init  Dockerfile.prod  Dockerfile.sqlx_user  Readme.md  docker-compose.yml
migrations/: 0001_users.sql
src/: main.rs  riot_api.rs
src/templates/: base.html  error.html  index.html  match.html  user.html
static/: htmx.min.js
