[package]
name = "loleighty"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }
actix-web = "4"
tera = "1.20"
dotenv = "*"
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
actix-files = "0.6.6"
governor = "0.10.0"
nonzero_ext = "0.3.0"
http-cache-reqwest = "0.15.1"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
sqlx = { version = "0.8.3", features = ["runtime-async-std"] }
